testsuite/tests/parser/should_fail/T25258a.hs
{-# LANGUAGE MagicHash, ExtendedLiterals #-}

module T25258a where

import GHC.Exts

x1 = 0x08#Misc  -- invalid uppercase identifier
